Fix issue where the phrase or comment may be so long it bleeds out side of the card on the home page. Now really long strings or comments will be clipped using ellipsis. If the user needs to see the full string they can click on the card and go to the string details view.

--- a/app/assets/stylesheets/root_strings.scss
+++ b/app/assets/stylesheets/root_strings.scss
@@ -91,6 +91,8 @@
 
 		p {
 			margin-top: 2px;
+			overflow: hidden;
+			text-overflow: ellipsis;
 		}
 
 		p:first-of-type {
